# oz_class

05_bootstrap/: admin.html
06_crawling/: kream.py  melon.py  melon_m.py  naver_1.py  naver_2.py  naver_3.py  naver_4.py  naver_5.py  naver_6.py  selenium_1.py  selenium_2.py  selenium_3.py  selenium_4.py
07_MySQL/: airbnb_pymysql.py  data_generate.py  refac_pymysql.py  test_pymysql.py  간단스키마_재훈.sql  실습_2.sql
08_scraping_miniproject/: README.md  musinsa.py
09_AWS/: README.md  my-key.ppk
10_Linux/: MentoringClass.md  Readme.md
11_flask/: README.md  파이썬문법정리.md
12_Django/: README.md  db.sqlite3  django_개념정리.md  pyproject.toml  개념정리_django_REST framework.md  개념정리_jwt.md  개념정리_simplejwt.md
12_Django/boards/: admin.py  models.py
12_Django/boards/migrations/: 0001_initial.py  0002_board_date_board_likes_board_reviews_board_writer.py  0003_board_created_at_board_updated_at.py  0004_board_user.py
12_Django/common/: models.py
12_Django/config/: authentication.py  settings.py  urls.py
12_Django/feeds/: models.py  serializers.py  views.py
12_Django/feeds/migrations/: 0001_initial.py
12_Django/reviews/: models.py
12_Django/reviews/migrations/: 0001_initial.py
12_Django/users/: admin.py  models.py  serializers.py  urls.py  views.py
12_Django/users/migrations/: 0001_initial.py  0002_user_is_business.py  0003_user_grade.py
13_DataAnalysis/: 01.data_analysis.ipynb  02.pandas.ipynb  03.matplotib.ipynb  readme.md
15_FastAPI/: README.md  books.py  connection.py  crud_orm.py  database.py  main.py  models.py  sockets.py
16_운영체제원리/: README.md
(+130 files in other folders)
