[tool.poetry]
name = "12-django"
version = "0.1.0"
description = ""
authors = ["BE02LEEJAEHOON <ljhx6787@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
selenium = "^4.18.1"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
